istio/prod/httproute/frontend.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: app
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-ingress
      sectionName: https

  hostnames:
    - "demo.chungndinh.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend
          port: 8080
          kind: Service
