istio/prod/httproute/policy-reporter.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  namespace: policy-reporter
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-ingress
      sectionName: https

  hostnames:
    - "policy-reporter.chungndinh.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: policy-reporter-ui
          port: 8080
          kind: Service
